<resources>
    <string name="app_name" translatable="false">Basic Pomodora</string>
    <string name="action_settings">Settings</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="hint_minute">Minute</string>
    <string name="settings_timer">Timer</string>
    <string name="settings_notifications">Notifications</string>
    <string name="duration">Duration</string>
    <string name="success_msg">Would you like  to take a break?</string>
    <string name="duration_summary">Insert the Duration</string>
    <string name="break_msg">Break</string>
    <string name="break_sumarry">Insert the Break Duration</string>
    <string name="finish">Finish</string>
    <string name="take_a_break">Take a break?</string>
    <string name="no">No</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="vibration">Vibration</string>
    <string name="vibration_off">Vibration Off</string>
    <string name="vibration_on">Vibration On</string>
    <string name="share_using">Share Using</string>
    <string name="break_msg_over">The break is over! Now working time</string>
    <string name="continue_01">Continue</string>
    <string name="finished">Finished</string>
    <string name="title_activity_help_me" translatable="false">HelpMeActivity</string>
    <string name="help_dev">Help the developer</string>
    <string name="podomodora_search">What is pomodoro technique</string>
</resources>
